--- a/app/src/main/res/layout/item_chat_button_shapes_adapter.xml
+++ b/app/src/main/res/layout/item_chat_button_shapes_adapter.xml
@@ -43,7 +43,7 @@
             android:text="@string/circle_checkmark_icon"
             android:textSize="@dimen/small_text_size"
             android:visibility="invisible"
-            app:customTextViewFont="@string/icons" />
+            app:customFont="@string/icons" />
     </LinearLayout>
 
 </RelativeLayout>
