--- a/app/src/main/res/layout/item_chat_list.xml
+++ b/app/src/main/res/layout/item_chat_list.xml
@@ -55,7 +55,7 @@
                     android:text="hello"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/_13ssp"
-                    app:customTextViewFont="@string/Roboto_Light" />
+                    app:customFont="@string/Roboto_Light" />
 
             </LinearLayout>
 
