--- a/app/src/main/res/layout/activity_chat_card_view_config.xml
+++ b/app/src/main/res/layout/activity_chat_card_view_config.xml
@@ -41,7 +41,7 @@
                     android:text="@string/select_cardview_style"
                     android:textColor="@color/darkGray"
                     android:textSize="@dimen/small_text_size"
-                    app:customTextViewFont="@string/Roboto_Light" />
+                    app:customFont="@string/Roboto_Light" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_cardview_shapes"
@@ -73,7 +73,7 @@
                     android:text="@string/border_size_and_color"
                     android:textColor="@color/darkGray"
                     android:textSize="@dimen/small_text_size"
-                    app:customTextViewFont="@string/Roboto_Light" />
+                    app:customFont="@string/Roboto_Light" />
 
                 <LinearLayout
                     android:id="@+id/ll_border_color"
@@ -91,7 +91,7 @@
                         android:textColor="@color/lightGray"
                         android:layout_marginStart="@dimen/_10sdp"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <include
                         android:id="@+id/border_color_layout"
@@ -119,7 +119,7 @@
                         android:text="@string/border_size"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/spinner_border_size"
@@ -154,7 +154,7 @@
                     android:text="@string/cardview_header"
                     android:textColor="@color/darkGray"
                     android:textSize="@dimen/small_text_size"
-                    app:customTextViewFont="@string/Roboto_Light" />
+                    app:customFont="@string/Roboto_Light" />
 
                 <LinearLayout
                     android:id="@+id/ll_header_bg_color"
@@ -172,7 +172,7 @@
                         android:text="@string/background_color"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <include
                         android:id="@+id/header_bg_color_layout"
@@ -201,7 +201,7 @@
                         android:text="@string/text_color"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <include
                         android:id="@+id/header_text_color_layout"
@@ -230,7 +230,7 @@
                         android:text="@string/text_size"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/spinner_header_text_size"
@@ -265,7 +265,7 @@
                     android:text="@string/cardview_footer_button"
                     android:textColor="@color/darkGray"
                     android:textSize="@dimen/small_text_size"
-                    app:customTextViewFont="@string/Roboto_Light" />
+                    app:customFont="@string/Roboto_Light" />
 
                 <LinearLayout
                     android:id="@+id/ll_footer_bg_color"
@@ -283,7 +283,7 @@
                         android:text="@string/background_color"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <include
                         android:id="@+id/footer_bg_color_layout"
@@ -312,7 +312,7 @@
                         android:text="@string/text_color"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <include
                         android:id="@+id/footer_text_color_layout"
@@ -341,7 +341,7 @@
                         android:text="@string/text_size"
                         android:textColor="@color/lightGray"
                         android:textSize="@dimen/small_text_size"
-                        app:customTextViewFont="@string/Roboto_Light" />
+                        app:customFont="@string/Roboto_Light" />
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/spinner_footer_text_size"
@@ -375,7 +375,7 @@
                     android:layout_below="@id/view4"
                     android:layout_margin="@dimen/_10sdp"
                     android:text="@string/drop_shadow"
-                    app:customTextViewFont="@string/Roboto_Light" />
+                    app:customFont="@string/Roboto_Light" />
 
                 <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/sw_drop_shadow"
