--- a/app/src/main/res/layout/item_chat_bubble_styles_adapter.xml
+++ b/app/src/main/res/layout/item_chat_bubble_styles_adapter.xml
@@ -42,7 +42,7 @@
                 android:text="@string/circle_checkmark_icon"
                 android:textSize="@dimen/_10ssp"
                 android:visibility="invisible"
-                app:customTextViewFont="@string/icons" />
+                app:customFont="@string/icons" />
 
         </LinearLayout>
         </RelativeLayout>
