--- a/app/src/main/res/layout/select_color_layout.xml
+++ b/app/src/main/res/layout/select_color_layout.xml
@@ -52,7 +52,7 @@
                     android:text="@string/select_color"
                     android:textColor="@color/darkGray"
                     android:textSize="@dimen/small_text_size"
-                    app:customTextViewFont="@string/Roboto_Italic" />
+                    app:customFont="@string/Roboto_Italic" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </androidx.cardview.widget.CardView>
