--- a/app/src/main/res/layout/spinner_item_layout.xml
+++ b/app/src/main/res/layout/spinner_item_layout.xml
@@ -18,7 +18,7 @@
         android:text="@string/title"
         android:textColor="@color/darkGray"
         android:textSize="@dimen/small_text_size"
-        app:customTextViewFont="@string/Roboto_Italic" />
+        app:customFont="@string/Roboto_Italic" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_drop_down"
