--- a/app/src/main/res/layout/activity_splash_config.xml
+++ b/app/src/main/res/layout/activity_splash_config.xml
@@ -460,19 +460,41 @@
 
                 </LinearLayout>
 
-                <com.example.corechatoperationconfigapp.customviews.CustomButton
-                    android:id="@+id/btn_preview"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/ll_bg_color_image"
-                    android:layout_centerHorizontal="true"
-                    android:layout_margin="@dimen/_10sdp"
-                    android:background="@drawable/button_round"
-                    android:text="@string/preview"
-                    android:textAllCaps="false"
-                    android:textColor="@color/darkGray"
-                    app:customButtonFont="@string/Roboto_Light"
-                    android:onClick="onClick"/>
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp">
+
+                    <com.example.corechatoperationconfigapp.customviews.CustomButton
+                        android:id="@+id/btn_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginStart="@dimen/_20sdp"
+                        android:background="@drawable/button_left_corner_round"
+                        android:onClick="onClick"
+                        android:text="@string/back"
+                        android:textAllCaps="false"
+                        android:textColor="@color/darkGray"
+                        app:customButtonFont="@string/Roboto_Light" />
+
+                    <com.example.corechatoperationconfigapp.customviews.CustomButton
+                        android:id="@+id/btn_preview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:background="@drawable/button_right_corner_round"
+                        android:onClick="onClick"
+                        android:text="@string/preview"
+                        android:textAllCaps="false"
+                        android:textColor="@color/darkGray"
+                        app:customButtonFont="@string/Roboto_Light" />
+
+                </RelativeLayout>
 
             </RelativeLayout>
 
