--- a/app/src/main/res/layout/activity_splash_preview.xml
+++ b/app/src/main/res/layout/activity_splash_preview.xml
@@ -53,9 +53,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
             android:background="@drawable/button_left_corner_round"
             android:onClick="onClick"
-            android:layout_margin="@dimen/_20sdp"
             android:text="@string/back"
             android:textAllCaps="false"
             android:textColor="@color/darkGray"
